2010-11-03  Antonio Gomes  <tonikitoo@webkit.org>, Andre Pedralho  <andre.pedralho@gmail.com>

Reviewed by Kenneth Rohde Christiansen and Antti Koivisto.

        [Qt] Making effective use of nodesFromRect.
        https://bugs.webkit.org/show_bug.cgi?id=44089

        Patch adds a helper class (named TouchAdjuster) to improve tap actions
        on mobile touch devices. TouchAdjuster makes use of the newly added rect
        based hit test extension through the Document::nodesFromRect method.
        Given a rectangle as input, nodesFromRect returns a z-index ordered list
        of nodes whose boundaries intersect the rectangle.

        Basically the TouchAdjuster class intercepts the QGraphicsSceneMouseEvent
        passed to both QWebPagePrivate::mouse{Press,Release}Event methods before
        they are passed down to WebCore. The goal is to infer the target click position.
        For that, a rectangle is built up using the event position as a center point and
        expanding it based on the values and directions set in the Platform Plugin
        QWebTouchModifier::hitTestPadding.

        TouchAdjuster iterates over the list of nodes returned by nodesFromRect and
        picks the clickable one that has the largest intersection area with the hit
        test rectangle. The target position is then the center point of this intersection
        area.

        In case of no clickable node intersects the hit test area, the click position
        is not altered.

        TouchAdjuster is *only* working for QGraphicsWebView based views.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::mousePressEvent):
        (QWebPagePrivate::mouseReleaseEvent):
        (QWebPagePrivate::adjustPointForClicking):
        (QWebPagePrivate::TouchAdjuster::TouchAdjuster):
        (QWebPagePrivate::TouchAdjuster::findCandidatePointForTouch):
        (isClickableElement):
        (hasMouseListener):
        (isValidFrameOwner):
        (nodeToElement):
        * Api/qwebpage_p.h:

Canonical link: https://commits.webkit.org/61880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71393 268f45cc-cd09-0410-ab3c-d52691b4dbfc